@@ -1,4 +1,4 @@
-gtkfeed README
+gtk-feed README
 
 Copyright (C) Henri Häkkinen
 
