@@ -1,3 +1,7 @@
+2008-10-18  Henri Häkkinen  <henux@users.sourceforge.net>
+
+	* rssfeed.c: Initial implementation of RSS feed parser.
+
 2008-10-17  Henri Häkkinen  <henux@users.sourceforge.net>
 
 	* main.c: Initial implementations of the system tray and
